# star-router

./: .dockerignore  .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
benches/: lookup_benchmark.rs
src/: lib.rs  map.rs  path.rs  route.rs  route_match.rs  router.rs  tree.rs
